--- a/playbook.yml
+++ b/playbook.yml
@@ -1,1 +1,79 @@
-It’s somewhat like that, but actually, it's not a license server managing NGINX instances. I’m not entirely sure, as our architecture and engineering teams handled that aspect.
+#!/bin/bash
+
+# Dry run for grawfd
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd/ user@remote:/gcp/destination/grawfd/
+
+# Dry run for gcp_temp
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_temp/ user@remote:/gcp/destination/gcp_temp/
+
+# Dry run for gcp_qa
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_qa/ user@remote:/gcp/destination/gcp_qa/
+
+# Dry run for gra_workflows_common
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gra_workflows_common/ user@remote:/gcp/destination/gra_workflows_common/
+
+# Dry run for gra_archive
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gra_archive/ user@remote:/gcp/destination/gra_archive/
+
+# Dry run for grawfd_scenario_generation
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_scenario_generation/ user@remote:/gcp/destination/grawfd_scenario_generation/
+
+# Dry run for infra_tools_backup
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/infra_tools_backup/ user@remote:/gcp/destination/infra_tools_backup/
+
+# Dry run for grawfd_physical_climate_risk
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_physical_climate_risk/ user@remote:/gcp/destination/grawfd_physical_climate_risk/
+
+# Dry run for grawfd_consumer_astm
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_consumer_astm/ user@remote:/gcp/destination/grawfd_consumer_astm/
+
+# Dry run for grawfd_wholesale_loss_forecasting
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_wholesale_loss_forecasting/ user@remote:/gcp/destination/grawfd_wholesale_loss_forecasting/
+
+# Dry run for grawfd_wildfire_damage
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_wildfire_damage/ user@remote:/gcp/destination/grawfd_wildfire_damage/
+
+# Dry run for grawfd_physical_risk_damage
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_physical_risk_damage/ user@remote:/gcp/destination/grawfd_physical_risk_damage/
+
+# Dry run for grawfd_mortgage_lob
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_mortgage_lob/ user@remote:/gcp/destination/grawfd_mortgage_lob/
+
+# Dry run for grawfd_mortgage
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_mortgage/ user@remote:/gcp/destination/grawfd_mortgage/
+
+# Dry run for gcp_lite
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_lite/ user@remote:/gcp/destination/gcp_lite/
+
+# Dry run for gcp_lite_consumer
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_lite_consumer/ user@remote:/gcp/destination/gcp_lite_consumer/
+
+# Dry run for gcp_lite_consumer_ops
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_lite_consumer_ops/ user@remote:/gcp/destination/gcp_lite_consumer_ops/
+
+# Dry run for gcp_non_kernel
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_non_kernel/ user@remote:/gcp/destination/gcp_non_kernel/
+
+# Dry run for wf_signature
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/wf_signature/ user@remote:/gcp/destination/wf_signature/
+
+# Dry run for job_management_service
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/job_management_service/ user@remote:/gcp/destination/job_management_service/
+
+# Dry run for infra_tools
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/infra_tools/ user@remote:/gcp/destination/infra_tools/
+
+# Dry run for grawfd_climate
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_climate/ user@remote:/gcp/destination/grawfd_climate/
+
+# Dry run for grawfd_ops_risk
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/grawfd_ops_risk/ user@remote:/gcp/destination/grawfd_ops_risk/
+
+# Dry run for telegramd
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/telegramd/ user@remote:/gcp/destination/telegramd/
+
+# Dry run for gcp_py_samples
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/gcp_py_samples/ user@remote:/gcp/destination/gcp_py_samples/
+
+# Dry run for data
+rsync -avz --dry-run /appdata/clustersusercode/prd/dist/prod1/data/ user@remote:/gcp/destination/data/
