--- a/playbook.yml
+++ b/playbook.yml
@@ -1,35 +1,1 @@
-#!/bin/bash
-
-# Function to check if NGINX is running for a given environment
-check_nginx() {
-    local ENV=$1
-    local APP_NAME=$2
-    local NGINX_CONF=$3
-
-    PROCESS_MATCH_COUNT=`pgrep -f $NGINX_CONF | wc -l`
-
-    if [ ! -f "/gcp/autosys/watchdog/${ENV}/${APP_NAME}_DOWN" ]; then
-        if [ "$PROCESS_MATCH_COUNT" -eq "0" ]; then
-            printf "WARN: NGINX process is not running for $ENV\n"
-            /usr/sbin/nginx -c $NGINX_CONF
-            send_outage_alert $ENV $APP_NAME
-            sleep 5
-        else
-            printf "INFO: $APP_NAME is running – OK\n"
-        fi
-    else
-        if [ "$PROCESS_MATCH_COUNT" -eq "0" ]; then
-            printf "WARN: NGINX process is not running for $ENV\n"
-            /usr/sbin/nginx -c $NGINX_CONF
-            sleep 5
-        else
-            printf "INFO: $APP_NAME is running – OK\n"
-            send_operational_alert $ENV $APP_NAME
-        fi
-    fi
-}
-
-# Call the function for each environment
-check_nginx "S1" "NGINX_API" "/gcp/$ENV/config/nginx.conf"
-check_nginx "S1" "NGINX_UI" "/gcp/$ENV/config/nginx_ui.conf"
-check_nginx "NGINX_DEVOPS" "NGINX" "/gcp/lib/config/nginx_devOps_site.conf"
+dditionally, it appears the task is configured to fail when it doesn't receive a 200 or 201 status code in the stdout logs, which is causing Ansible to proceed with the subsequent steps despite the task failing."
