--- a/playbook.yml
+++ b/playbook.yml
@@ -1,21 +1,1 @@
-#!/bin/bash
-
-# Files to compare
-file_a="path/to/file_a"
-file_b="path/to/file_b"
-
-# Check if both files exist
-if [[ ! -f "$file_a" || ! -f "$file_b" ]]; then
-  echo "One or both files do not exist."
-  exit 1
-fi
-
-# Compare the files and output the differences
-diff_output=$(diff "$file_a" "$file_b")
-
-if [[ -z "$diff_output" ]]; then
-  echo "The files are identical."
-else
-  echo "The files differ:"
-  echo "$diff_output"
-fi
+Satish has worked on this issue. It appears that these changes are related to Redis cache usage. A retry loop has been implemented for retrieving Redis credentials during startup. Version GCP==4.29.0b2471 includes a fix for the issue, which ensures that if the vault cannot retrieve the credentials, it will ignore the error and proceed to the next steps.
