--- a/playbook.yml
+++ b/playbook.yml
@@ -1,1 +1,6 @@
-Satish has worked on this issue. It appears that these changes are related to Redis cache usage. A retry loop has been implemented for retrieving Redis credentials during startup. Version GCP==4.29.0b2471 includes a fix for the issue, which ensures that if the vault cannot retrieve the credentials, it will ignore the error and proceed to the next steps.
+Enhance the GRA repository setup script.
+Tailor the centralized Jenkins library for GEO/GRA users.
+Refactor the deployment playbook workflow to divide tasks, reduce file size, and standardize it for SBX lanes (used on edge nodes).
+Utilize InfluxDB and Grafana for monitoring our EM and infrastructure metrics.
+Rework the signal task in the deploy system workflows.
+These ideas are just initial thoughts; I'll expand on these later.
