--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,1 @@
-Enhance the GRA repository setup script.
-Tailor the centralized Jenkins library for GEO/GRA users.
-Refactor the deployment playbook workflow to divide tasks, reduce file size, and standardize it for SBX lanes (used on edge nodes).
-Utilize InfluxDB and Grafana for monitoring our EM and infrastructure metrics.
-Rework the signal task in the deploy system workflows.
-These ideas are just initial thoughts; I'll expand on these later.
+The current upstream timeout is configured to 900 seconds, which should be sufficiently long to handle most backend operations without causing timeouts. Regarding the API that returns a 200 success response, could you please specify which API endpoint is involved? 
